packages/@aws-cdk-testing/framework-integ/test/aws-ecs/test/fargate/integ.service-connect.js.snapshot/aws-ecs-service-connect.template.json
{
 "Resources": {
  "EcsCluster97242B84": {
   "Type": "AWS::ECS::Cluster",
   "Properties": {
    "ServiceConnectDefaults": {
     "Namespace": {
      "Fn::GetAtt": [
       "EcsClusterDefaultServiceDiscoveryNamespaceB0971B2F",
       "Arn"
      ]
     }
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "EcsClusterVpc779914AB": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-ecs-service-connect/EcsCluster/Vpc"
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "EcsClusterVpcPublicSubnet1Subnet4AC37B0F": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "aws-ecs-service-connect/EcsCluster/Vpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "EcsClusterVpc779914AB"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "EcsClusterVpcPublicSubnet1RouteTable4AE3113D": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-ecs-service-connect/EcsCluster/Vpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "EcsClusterVpc779914AB"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "EcsClusterVpcPublicSubnet1RouteTableAssociation49C4CDBB": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "EcsClusterVpcPublicSubnet1RouteTable4AE3113D"
    },
    "SubnetId": {
     "Ref": "EcsClusterVpcPublicSubnet1Subnet4AC37B0F"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "EcsClusterVpcPublicSubnet1DefaultRoute8C7EFC96": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "EcsClusterVpcIGW3663B083"
    },
    "RouteTableId": {
     "Ref": "EcsClusterVpcPublicSubnet1RouteTable4AE3113D"
    }
   },
   "DependsOn": [
    "EcsClusterVpcVPCGW944296C0"
   ],
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "EcsClusterVpcPublicSubnet1EIP2D3759A3": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-ecs-service-connect/EcsCluster/Vpc/PublicSubnet1"
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "EcsClusterVpcPublicSubnet1NATGateway2F1E7764": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "EcsClusterVpcPublicSubnet1EIP2D3759A3",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "EcsClusterVpcPublicSubnet1Subnet4AC37B0F"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-ecs-service-connect/EcsCluster/Vpc/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "EcsClusterVpcPublicSubnet1DefaultRoute8C7EFC96",
    "EcsClusterVpcPublicSubnet1RouteTableAssociation49C4CDBB"
   ],
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "EcsClusterVpcPublicSubnet2Subnet4A959A4C": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "aws-ecs-service-connect/EcsCluster/Vpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "EcsClusterVpc779914AB"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "EcsClusterVpcPublicSubnet2RouteTable89A2F6C5": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-ecs-service-connect/EcsCluster/Vpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "EcsClusterVpc779914AB"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "EcsClusterVpcPublicSubnet2RouteTableAssociationE4D42FC1": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "EcsClusterVpcPublicSubnet2RouteTable89A2F6C5"
    },
    "SubnetId": {
     "Ref": "EcsClusterVpcPublicSubnet2Subnet4A959A4C"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "EcsClusterVpcPublicSubnet2DefaultRoute048730F7": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "EcsClusterVpcIGW3663B083"
    },
    "RouteTableId": {
     "Ref": "EcsClusterVpcPublicSubnet2RouteTable89A2F6C5"
    }
   },
   "DependsOn": [
    "EcsClusterVpcVPCGW944296C0"
   ],
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "EcsClusterVpcPublicSubnet2EIP26E3EEEF": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-ecs-service-connect/EcsCluster/Vpc/PublicSubnet2"
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "EcsClusterVpcPublicSubnet2NATGatewayBD015416": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "EcsClusterVpcPublicSubnet2EIP26E3EEEF",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "EcsClusterVpcPublicSubnet2Subnet4A959A4C"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-ecs-service-connect/EcsCluster/Vpc/PublicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "EcsClusterVpcPublicSubnet2DefaultRoute048730F7",
    "EcsClusterVpcPublicSubnet2RouteTableAssociationE4D42FC1"
   ],
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "EcsClusterVpcPrivateSubnet1SubnetFAB0E487": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "aws-ecs-service-connect/EcsCluster/Vpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "EcsClusterVpc779914AB"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "EcsClusterVpcPrivateSubnet1RouteTable2EA148EE": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-ecs-service-connect/EcsCluster/Vpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "EcsClusterVpc779914AB"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "EcsClusterVpcPrivateSubnet1RouteTableAssociationF4E8ACD7": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "EcsClusterVpcPrivateSubnet1RouteTable2EA148EE"
    },
    "SubnetId": {
     "Ref": "EcsClusterVpcPrivateSubnet1SubnetFAB0E487"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "EcsClusterVpcPrivateSubnet1DefaultRoute0239F5D0": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "EcsClusterVpcPublicSubnet1NATGateway2F1E7764"
    },
    "RouteTableId": {
     "Ref": "EcsClusterVpcPrivateSubnet1RouteTable2EA148EE"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "EcsClusterVpcPrivateSubnet2SubnetC2B7B1BA": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "aws-ecs-service-connect/EcsCluster/Vpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "EcsClusterVpc779914AB"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "EcsClusterVpcPrivateSubnet2RouteTable1D430E45": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-ecs-service-connect/EcsCluster/Vpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "EcsClusterVpc779914AB"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "EcsClusterVpcPrivateSubnet2RouteTableAssociation329A2412": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "EcsClusterVpcPrivateSubnet2RouteTable1D430E45"
    },
    "SubnetId": {
     "Ref": "EcsClusterVpcPrivateSubnet2SubnetC2B7B1BA"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "EcsClusterVpcPrivateSubnet2DefaultRoute27221D27": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "EcsClusterVpcPublicSubnet2NATGatewayBD015416"
    },
    "RouteTableId": {
     "Ref": "EcsClusterVpcPrivateSubnet2RouteTable1D430E45"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "EcsClusterVpcIGW3663B083": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-ecs-service-connect/EcsCluster/Vpc"
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "EcsClusterVpcVPCGW944296C0": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "EcsClusterVpcIGW3663B083"
    },
    "VpcId": {
     "Ref": "EcsClusterVpc779914AB"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "EcsClusterVpcRestrictDefaultSecurityGroupCustomResource8F588911": {
   "Type": "Custom::VpcRestrictDefaultSG",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E",
      "Arn"
     ]
    },
    "DefaultSecurityGroupId": {
     "Fn::GetAtt": [
      "EcsClusterVpc779914AB",
      "DefaultSecurityGroup"
     ]
    },
    "Account": {
     "Ref": "AWS::AccountId"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "EcsClusterDefaultServiceDiscoveryNamespaceB0971B2F": {
   "Type": "AWS::ServiceDiscovery::PrivateDnsNamespace",
   "Properties": {
    "Name": "scorekeep.com",
    "Vpc": {
     "Ref": "EcsClusterVpc779914AB"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Version": "2012-10-17",
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ]
    },
    "ManagedPolicyArns": [
     {
      "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
     }
    ],
    "Policies": [
     {
      "PolicyName": "Inline",
      "PolicyDocument": {
       "Version": "2012-10-17",
       "Statement": [
        {
         "Effect": "Allow",
         "Action": [
          "ec2:AuthorizeSecurityGroupIngress",
          "ec2:AuthorizeSecurityGroupEgress",
          "ec2:RevokeSecurityGroupIngress",
          "ec2:RevokeSecurityGroupEgress"
         ],
         "Resource": [
          {
           "Fn::Join": [
            "",
            [
             "arn:",
             {
              "Ref": "AWS::Partition"
             },
             ":ec2:",
             {
              "Ref": "AWS::Region"
             },
             ":",
             {
              "Ref": "AWS::AccountId"
             },
             ":security-group/",
             {
              "Fn::GetAtt": [
               "EcsClusterVpc779914AB",
               "DefaultSecurityGroup"
              ]
             }
            ]
           ]
          }
         ]
        }
       ]
      }
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": {
      "Fn::Sub": "cdk-hnb659fds-assets-${AWS::AccountId}-${AWS::Region}"
     },
     "S3Key": "55549d0bfa9628b306c349544b7d95017221e259e17875f3d38f2a3d2da5043f.zip"
    },
    "Timeout": 900,
    "MemorySize": 128,
    "Handler": "__entrypoint__.handler",
    "Role": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0",
      "Arn"
     ]
    },
    "Runtime": "nodejs24.x",
    "Description": "Lambda function for removing all inbound/outbound rules from the VPC default security group"
   },
   "DependsOn": [
    "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0"
   ],
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "TaskDefTaskRole1EDB4A67": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "TaskDef54694570": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Essential": true,
      "Image": "amazon/amazon-ecs-sample",
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "TaskDefContainerLogGroupB60E6F44"
        },
        "awslogs-stream-prefix": "web",
        "awslogs-region": {
         "Ref": "AWS::Region"
        }
       }
      },
      "Name": "web",
      "PortMappings": [
       {
        "AppProtocol": "http2",
        "ContainerPort": 80,
        "Name": "api",
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "1024",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "TaskDefExecutionRoleB4775C97",
      "Arn"
     ]
    },
    "Family": "awsecsserviceconnectTaskDefEE77A948",
    "Memory": "2048",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "TaskDefTaskRole1EDB4A67",
      "Arn"
     ]
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "TaskDefContainerLogGroupB60E6F44": {
   "Type": "AWS::Logs::LogGroup",
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "TaskDefExecutionRoleB4775C97": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "TaskDefExecutionRoleDefaultPolicy0DBB737A": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": [
        {
         "Fn::GetAtt": [
          "ServiceConnectProxyLogGroup8637D678",
          "Arn"
         ]
        },
        {
         "Fn::GetAtt": [
          "SvcLogGroupC37946A3",
          "Arn"
         ]
        },
        {
         "Fn::GetAtt": [
          "TaskDefContainerLogGroupB60E6F44",
          "Arn"
         ]
        }
       ]
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "TaskDefExecutionRoleDefaultPolicy0DBB737A",
    "Roles": [
     {
      "Ref": "TaskDefExecutionRoleB4775C97"
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "SvcServiceE0738BDC": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "EcsCluster97242B84"
    },
    "DeploymentConfiguration": {
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "EnableECSManagedTags": false,
    "LaunchType": "FARGATE",
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "SvcSecurityGroup210F6F1C",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "EcsClusterVpcPrivateSubnet1SubnetFAB0E487"
       },
       {
        "Ref": "EcsClusterVpcPrivateSubnet2SubnetC2B7B1BA"
       }
      ]
     }
    },
    "ServiceConnectConfiguration": {
     "Enabled": true,
     "LogConfiguration": {
      "LogDriver": "awslogs",
      "Options": {
       "awslogs-group": {
        "Ref": "SvcLogGroupC37946A3"
       },
       "awslogs-stream-prefix": "sc",
       "awslogs-region": {
        "Ref": "AWS::Region"
       }
      }
     },
     "Namespace": "scorekeep.com",
     "Services": [
      {
       "ClientAliases": [
        {
         "DnsName": "api",
         "Port": 80
        }
       ],
       "PortName": "api"
      }
     ]
    },
    "TaskDefinition": {
     "Ref": "TaskDef54694570"
    }
   },
   "DependsOn": [
    "TaskDefTaskRole1EDB4A67"
   ],
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "SvcLogGroupC37946A3": {
   "Type": "AWS::Logs::LogGroup",
   "DependsOn": [
    "TaskDefTaskRole1EDB4A67"
   ],
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "SvcSecurityGroup210F6F1C": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "aws-ecs-service-connect/Svc/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "EcsClusterVpc779914AB"
    }
   },
   "DependsOn": [
    "TaskDefTaskRole1EDB4A67"
   ],
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "Ns33A06F6E": {
   "Type": "AWS::ServiceDiscovery::HttpNamespace",
   "Properties": {
    "Name": "whistler.com"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "SvcTwoServiceB062AEA3": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "EcsCluster97242B84"
    },
    "DeploymentConfiguration": {
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "EnableECSManagedTags": false,
    "LaunchType": "FARGATE",
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "SvcTwoSecurityGroup47BD6E0D",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "EcsClusterVpcPrivateSubnet1SubnetFAB0E487"
       },
       {
        "Ref": "EcsClusterVpcPrivateSubnet2SubnetC2B7B1BA"
       }
      ]
     }
    },
    "ServiceConnectConfiguration": {
     "AccessLogConfiguration": {
      "Format": "JSON",
      "IncludeQueryParameters": "ENABLED"
     },
     "Enabled": true,
     "LogConfiguration": {
      "LogDriver": "awslogs",
      "Options": {
       "awslogs-group": {
        "Ref": "ServiceConnectProxyLogGroup8637D678"
       },
       "awslogs-stream-prefix": "sc-svc2",
       "awslogs-region": {
        "Ref": "AWS::Region"
       }
      }
     },
     "Namespace": {
      "Fn::GetAtt": [
       "Ns33A06F6E",
       "Arn"
      ]
     },
     "Services": [
      {
       "ClientAliases": [
        {
         "DnsName": "api",
         "Port": 80
        }
       ],
       "PortName": "api",
       "Timeout": {
        "IdleTimeoutSeconds": 30,
        "PerRequestTimeoutSeconds": 30
       }
      }
     ]
    },
    "TaskDefinition": {
     "Ref": "TaskDef54694570"
    }
   },
   "DependsOn": [
    "Ns33A06F6E",
    "TaskDefTaskRole1EDB4A67"
   ],
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "SvcTwoSecurityGroup47BD6E0D": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "aws-ecs-service-connect/SvcTwo/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "EcsClusterVpc779914AB"
    }
   },
   "DependsOn": [
    "Ns33A06F6E",
    "TaskDefTaskRole1EDB4A67"
   ],
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "SvcTwoSecurityGroupfromawsecsserviceconnectGeneratorSvcSecurityGroupA1ACC8BBALLPORTS12F3108E": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "from awsecsserviceconnectGeneratorSvcSecurityGroupA1ACC8BB:ALL PORTS",
    "FromPort": 0,
    "GroupId": {
     "Fn::GetAtt": [
      "SvcTwoSecurityGroup47BD6E0D",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "GeneratorSvcSecurityGroup1B8BCAC5",
      "GroupId"
     ]
    },
    "ToPort": 65535
   },
   "DependsOn": [
    "Ns33A06F6E",
    "TaskDefTaskRole1EDB4A67"
   ],
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "ServiceConnectProxyLogGroup8637D678": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "RetentionInDays": 731
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "GeneratorTaskDefTaskRole7FEFEB80": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "GeneratorTaskDef2DB1E233": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Command": [
       "sh",
       "-c",
       "while true; do wget -qO /dev/null http://api:80 2>&1 || true; sleep 5; done"
      ],
      "Essential": true,
      "Image": "public.ecr.aws/docker/library/alpine:latest",
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "GeneratorTaskDefGeneratorLogGroup20DFE05D"
        },
        "awslogs-stream-prefix": "gen",
        "awslogs-region": {
         "Ref": "AWS::Region"
        }
       }
      },
      "Name": "generator"
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "GeneratorTaskDefExecutionRoleF352D1FD",
      "Arn"
     ]
    },
    "Family": "awsecsserviceconnectGeneratorTaskDefCC43DE82",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "GeneratorTaskDefTaskRole7FEFEB80",
      "Arn"
     ]
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "GeneratorTaskDefGeneratorLogGroup20DFE05D": {
   "Type": "AWS::Logs::LogGroup",
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "GeneratorTaskDefExecutionRoleF352D1FD": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "GeneratorTaskDefExecutionRoleDefaultPolicyDB689A3E": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "GeneratorTaskDefGeneratorLogGroup20DFE05D",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "GeneratorTaskDefExecutionRoleDefaultPolicyDB689A3E",
    "Roles": [
     {
      "Ref": "GeneratorTaskDefExecutionRoleF352D1FD"
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "GeneratorSvcService666CE2AE": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "EcsCluster97242B84"
    },
    "DeploymentConfiguration": {
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "EnableECSManagedTags": false,
    "LaunchType": "FARGATE",
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "GeneratorSvcSecurityGroup1B8BCAC5",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "EcsClusterVpcPrivateSubnet1SubnetFAB0E487"
       },
       {
        "Ref": "EcsClusterVpcPrivateSubnet2SubnetC2B7B1BA"
       }
      ]
     }
    },
    "ServiceConnectConfiguration": {
     "Enabled": true,
     "Namespace": {
      "Fn::GetAtt": [
       "Ns33A06F6E",
       "Arn"
      ]
     }
    },
    "TaskDefinition": {
     "Ref": "GeneratorTaskDef2DB1E233"
    }
   },
   "DependsOn": [
    "GeneratorTaskDefTaskRole7FEFEB80"
   ],
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "GeneratorSvcSecurityGroup1B8BCAC5": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "aws-ecs-service-connect/GeneratorSvc/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "EcsClusterVpc779914AB"
    }
   },
   "DependsOn": [
    "GeneratorTaskDefTaskRole7FEFEB80"
   ],
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  }
 },
 "Outputs": {
  "ExportsOutputRefServiceConnectProxyLogGroup8637D678B2D651D1": {
   "Value": {
    "Ref": "ServiceConnectProxyLogGroup8637D678"
   },
   "Export": {
    "Name": "aws-ecs-service-connect:ExportsOutputRefServiceConnectProxyLogGroup8637D678B2D651D1"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
